# MGraph-AI__Service__Proxy

./: README.md  pyproject.toml
.github/workflows/: ci-pipeline.yml
.template/: VERSION
docs/: README.md
docs/dev/setup/: compete-guide-to-setup-new-repo.md  repo-setup-guide.md
mgraph_ai_service_proxy/: __init__.py  config.py
mgraph_ai_service_proxy/fast_api/: Service__Fast_API.py  lambda_handler.py
mgraph_ai_service_proxy/fast_api/routes/: Routes__Info.py  Routes__Proxy.py
mgraph_ai_service_proxy/schemas/: Schema__Proxy__Config.py  Schema__Proxy__Request.py  Schema__Proxy__Response.py
mgraph_ai_service_proxy/schemas/http/: Safe_Str__Http__Header_Name.py  Safe_Str__Http__Header_Value.py  Safe_Str__Http__Host.py  Safe_Str__Http__Method.py  Safe_Str__Http__Path.py  Safe_Str__Http__Query_String.py
mgraph_ai_service_proxy/service/info/: Service_Info.py
mgraph_ai_service_proxy/service/proxy/: Service__Proxy.py  Service__Proxy__Filter.py  Service__Proxy__Stats.py
mgraph_ai_service_proxy/utils/: Version.py
mgraph_ai_service_proxy/utils/deploy/: Deploy__Service.py
mgraph_ai_service_proxy/utils/testing/: Local_Upstream__Handler.py  Local_Upstream__Server.py
scripts/: release-script-v1.0.0.sh  run-locally.sh  setup-new-service-from-bare-github-repo.sh  update-version.sh
tests/deploy_aws/: test_Deploy__Service__base.py  test_Deploy__Service__to__dev.py
tests/unit/: Service__Fast_API__Test_Objs.py  test_config.py
tests/unit/fast_api/: test_Service__Fast_API__client.py  test_lambda_handler.py
tests/unit/schemas/: test_Schema__Proxy__Config.py  (+2 more)
(+17 files in other folders)
