[tool.poetry]
name        = "mgraph_ai_service_proxy"
version     = "v0.6.7"
description = "MGraph-AI__Service__Proxy"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__Proxy"
repository  = "https://github.com/the-cyber-boardroom/MGraph-AI__Service__Proxy"

[tool.poetry.dependencies]
python                     = "^3.12"
osbot-fast-api-serverless  = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"